--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@tailwindcss/forms": "^0.5.4",
+    "@tanstack/react-query": "^4.33.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -19,16 +20,20 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "eventsource-parser": "^1.0.0",
     "lucide-react": "^0.268.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-textarea-autosize": "^8.5.2",
-    "server-only": "^0.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
-  }
+    "typescript": "5.1.6",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {}
 }
